--- a/style_test.css
+++ b/style_test.css
@@ -1,5 +1,5 @@
 *{
-    background-color:#400040;
+    background-color:#c4c0be;
     /*margin: 50px; */
 }
    /*background-image: url(https://i.pinimg.com/1200x/17/65/da/1765dabad25ca76014abb9016b0196bf.jpg);
@@ -132,3 +132,4 @@ button:active
 #animalImg{
   background-image: none !important;
 }
+
